# mechlab3-policy

./: .gitignore  README.md  convert_to_lerobot.py  lefthook.yml  policy_runner.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/mechlab3_policy/: __init__.py  convert.py  sync.py
tests/: test_convert.py  test_sync.py
