# mechlab3-policy — kuas-mechlab3 teleop ロボットの学習・推論（ACT / SmolVLA）。
# ROS 非依存: bag は rosbags で読み、制御は websockets で送る（GPU 機に ROS 不要）。
[project]
name = "mechlab3-policy"
version = "0.0.0"
description = "Training & inference (ACT / SmolVLA) for the kuas-mechlab3 teleop robot. ROS-free."
requires-python = ">=3.10"
dependencies = [
    "lerobot",        # 学習スタック（ACT / SmolVLA）+ データセット形式
    "rosbags",        # ROS 無しで ROS2 bag を読む（Phase 3 の変換）
    "websockets",     # Pi への {vx,wz} 送信（Phase 7）
    "opencv-python",  # MJPEG フレーム取得 / 画像処理
    "av",             # mp4 エンコード（LeRobot の video backend）
    "numpy",
    # torch は lerobot 経由で入るが、CUDA 版は環境に合わせて別途入れること（README 参照）
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
