# mechlab3-policy — kuas-mechlab3 teleop ロボットの学習・推論（ACT / SmolVLA）。
# ROS 非依存: bag は rosbags で読み、制御は websockets で送る（GPU 機に ROS 不要）。
[project]
name = "mechlab3-policy"
version = "0.0.0"
description = "Training & inference (ACT / SmolVLA) for the kuas-mechlab3 teleop robot. ROS-free."
requires-python = ">=3.10"
dependencies = [
    "lerobot",        # 学習スタック（ACT / SmolVLA）+ データセット形式
    "rosbags",        # ROS 無しで ROS2 bag を読む（Phase 3 の変換）
    "websockets",     # Pi への {vx,wz} 送信（Phase 7）
    "opencv-python",  # MJPEG フレーム取得 / 画像処理
    "av",             # mp4 エンコード（LeRobot の video backend）
    "numpy",
    # torch は lerobot 経由で入るが、CUDA 版は環境に合わせて別途入れること（README 参照）
]

# 開発ツール（lint / type / test）は requirements-dev.txt 側で管理する。
# 実行時依存（torch 等の重量級）と分離することで、CI と git フックは
# それらを入れずに「純ロジックの black / mypy / pytest」だけを高速に回す。

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
# 型検査は純ロジック（src）とテストのみ。IO スクリプト（convert_to_lerobot / policy_runner）
# は重い依存を import するため対象外（実装が固まり次第ここに追加する）。
files = ["src/mechlab3_policy", "tests"]
strict = true

[[tool.mypy.overrides]]
# 重い実行時依存は CI / 型検査環境に入れないので未解決 import を許す
# （pure surface のみを検査する方針。robot リポと同じ）。
module = ["rosbags.*", "cv2.*", "lerobot.*", "websockets.*", "av.*", "numpy.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["mechlab3_policy"]

[tool.coverage.report]
show_missing = true

[tool.commitizen]
# Conventional Commits（commit-msg フックの cz check で検証）。
name = "cz_conventional_commits"
